# ClaudeCodeAgentsTeamProjects

./: .gitignore  CLAUDE.md  README.md  mimo-v2.5-pro  start_claude_danger.bat  start_claude_mimo.example.bat
.claude/: settings.local.json
.claude/agents/: ai-engineer.md  code-reviewer.md  data-scientist.md  debugger.md  image-reader.md  ml-engineer.md  mlops-engineer.md  multi-agent-coordinator.md  python-pro.md  scientific-literature-researcher.md  security-auditor.md  ui-visual-validator.md
.codex/: config.toml
.codex/agents/: image-reader.toml
.codex/skills/: wsl-environment.md
docs/: 部署与启动指南.md
lidar_trt_detection/: README.md
lidar_trt_detection/docs/: 00-setup-sudo.sh  01-proxy-and-locale.sh  08-final-verify.sh  项目说明书.md
lidar_trt_detection/ros2_ws/log/: latest_build
lidar_trt_detection/scripts/: build_engine.py  export_onnx.py  kitti_to_rosbag.py
projects/Lidar_3D_Perception/: .gitignore  README.md  install_all_env.sh
projects/Lidar_3D_Perception/01_environment_setup/: 02-system-tools.sh  03-ros2-humble.sh  04-cuda-toolkit.sh  06-openpcdet.sh  07-onnx.sh
projects/Lidar_3D_Perception/02_model_export/: export_onnx.py
projects/Lidar_3D_Perception/03_tensorrt_build/: build_engine.sh
projects/Lidar_3D_Perception/04_ros2_deployment/src/lidar_trt_detection/: CMakeLists.txt  package.xml
projects/Lidar_3D_Perception/04_ros2_deployment/src/lidar_trt_detection/rviz/: detection.rviz
projects/Lidar_3D_Perception/04_ros2_deployment/src/lidar_trt_detection/src/: lidar_detection_node.cpp  pointcloud_preprocess.cpp  postprocess.cpp  tensorrt_infer.cpp
projects/Lidar_3D_Perception/05_simulation_data/: kitti_to_rosbag.py
projects/Lidar_3D_Perception/06_docs_and_results/: README.md  (+8 more)
wsl-setup/: 05-miniconda.sh  09-fix-all.sh  10-check-env.sh  11-openpcdet-demo.sh
(+16 files in other folders)
